[tool.poetry]
name          = "lavasnek_rs"
version       = "0.1.0-alpha.3"
description   = "A lavalink-rs wrapper for any python async library"
authors       = ["vicky5124 <vickyf5124@gmail.com>"]
readme        = "README.md"
license       = "MPL-2.0"
homepage      = "https://github.com/vicky5124/lavasnek_rs"
repository    = "https://github.com/vicky5124/lavasnek_rs"
documentation = "https://5124.mywire.org:5124/docs/"

[tool.poetry.dependencies]
python = "^3.6.2"
black = "^21.12b0"

[tool.poetry.dev-dependencies]
maturin = ">=0.11"
pytest  = "^6.1"
flake8  = "^3.9.2"
black   = "^21.9b0"
mypy    = "^0.910"

[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]
#requires      = ["maturin>=0.11,<0.12"]
#build-backend = "maturin"

[tool.flake8]
python         = ">=3.6.2,<4.0"
version        = "^3.9.2"
target-version = ["py36"]

[tool.black]
python         = ">=3.6.2,<4.0"
version        = "^21.9b0"
line-length    = 120
include        = ".*pyi?$"
target-version = ["py36"]
